--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,7 @@ img {
   display: flex;
   gap: 24px;
   justify-content: center;
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
   /* align-items: ; */
 }
 
@@ -377,9 +377,7 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-  /* ------------------------- */
-  /* margin-bottom: 8px; */
-  /* ---------------------------- */
+  margin-bottom: 8px;
 }
 
 /* ------------------------------TEAM--------------------------- */
