--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,7 @@ img {
   cursor: pointer;
   display: block;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .solution-button:hover,
@@ -323,6 +324,8 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-container {
@@ -350,7 +353,7 @@ img {
 .team-logo-svg {
   display: flex;
   align-items: center;
-  fill: white;
+  fill: #f4f4fd;
 }
 
 .team-title {
@@ -455,6 +458,8 @@ img {
 
 .portfolio-item:hover .portfolio-wrap-item {
   transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /* ----------------------------PORTFOLIO--------------------------- */
