--- a/css/styles.css
+++ b/css/styles.css
@@ -456,10 +456,13 @@ img {
   transition: transform 300ms ease;
 }
 
-.portfolio-item:hover .portfolio-wrap-item {
-  transform: translateY(0%);
+.portfolio-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item:hover .portfolio-wrap-item {
+  transform: translateY(0%);
 }
 
 /* ----------------------------PORTFOLIO--------------------------- */
