--- a/css/styles.css
+++ b/css/styles.css
@@ -474,6 +474,11 @@ img {
   padding: 100px 0;
 }
 
+.footer {
+  display: flex;
+  align-items: baseline;
+}
+
 .footer-description {
   font-weight: 400;
   font-size: 16px;
