--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@ img {
 /* ------------------------------SOLUTION--------------------------- */
 
 .solution {
-  max-width: 1140px;
+  max-width: 1440px;
   background: #2e2f42;
   padding-top: 188px;
   margin: 0 auto;
@@ -324,8 +324,9 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); */
 }
 
 .team-container {
@@ -379,6 +380,7 @@ img {
   text-align: center;
   color: #434455;
   margin-bottom: 8px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------------------------TEAM--------------------------- */
